--- a/Practicals/Assignment-2/CMakeLists.txt
+++ b/Practicals/Assignment-2/CMakeLists.txt
@@ -1,8 +1,8 @@
-cmake_minimum_required(VERSION 3.22)
-project(Assignment_2 C)
+amogus
+amogus
 
-set(CMAKE_C_STANDARD 11)
+amogus
 
-add_executable(Q1 Q1.c)
+amogus
 
-add_executable(Q2 Q2.c)
+amogus
